[gd_scene load_steps=25 format=2]

[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Male/Male 05-1.png" type="Texture" id=1]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Male/Male 02-1.png" type="Texture" id=2]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Female/Female 08-1.png" type="Texture" id=3]
[ext_resource path="res://character selector.gd" type="Script" id=4]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Female/Female 09-1.png" type="Texture" id=5]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Female/Female 04-1.png" type="Texture" id=6]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Male/Male 03-1.png" type="Texture" id=7]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Female/Female 13-1.png" type="Texture" id=8]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Male/Male 16-1.png" type="Texture" id=9]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Male/Male 08-1.png" type="Texture" id=10]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Male/Male 18-1.png" type="Texture" id=11]
[ext_resource path="res://PIPOYA FREE RPG Character Sprites 32x32/Female/Female 03-1.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[node name="character selector" type="Node"]
script = ExtResource( 4 )

[node name="teamselect" type="Node" parent="."]

[node name="team 1" type="Button" parent="teamselect"]
margin_right = 12.0
margin_bottom = 20.0
rect_scale = Vector2( 21.5, 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team 2" type="Button" parent="teamselect"]
margin_left = 256.0
margin_right = 268.0
margin_bottom = 20.0
rect_scale = Vector2( 21.5, 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team 3" type="Button" parent="teamselect"]
margin_left = 512.0
margin_right = 524.0
margin_bottom = 20.0
rect_scale = Vector2( 21.5, 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team 4" type="Button" parent="teamselect"]
margin_left = 768.0
margin_right = 780.0
margin_bottom = 20.0
rect_scale = Vector2( 21.5, 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team 5" type="Button" parent="teamselect"]
margin_left = 1024.0
margin_right = 1036.0
margin_bottom = 20.0
rect_scale = Vector2( 21.5, 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team" type="Node" parent="."]

[node name="team1" type="AnimatedSprite" parent="team"]
position = Vector2( 128, 128 )
scale = Vector2( 8, 8 )
frames = SubResource( 12 )
animation = "0"

[node name="team2" type="AnimatedSprite" parent="team"]
position = Vector2( 384, 128 )
scale = Vector2( 8, 8 )
frames = SubResource( 12 )
animation = "0"

[node name="team3" type="AnimatedSprite" parent="team"]
position = Vector2( 640, 128 )
scale = Vector2( 8, 8 )
frames = SubResource( 12 )
animation = "0"

[node name="team4" type="AnimatedSprite" parent="team"]
position = Vector2( 896, 128 )
scale = Vector2( 8, 8 )
frames = SubResource( 12 )
animation = "0"

[node name="team5" type="AnimatedSprite" parent="team"]
position = Vector2( 1152, 128 )
scale = Vector2( 8, 8 )
frames = SubResource( 12 )
animation = "0"

[node name="characterselect" type="Node" parent="."]

[node name="character1" type="Button" parent="characterselect"]
margin_left = 80.0
margin_top = 320.0
margin_right = 92.0
margin_bottom = 340.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character2" type="Button" parent="characterselect"]
margin_left = 272.0
margin_top = 320.0
margin_right = 284.0
margin_bottom = 340.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character3" type="Button" parent="characterselect"]
margin_left = 464.0
margin_top = 320.0
margin_right = 476.0
margin_bottom = 340.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character4" type="Button" parent="characterselect"]
margin_left = 656.0
margin_top = 320.0
margin_right = 668.0
margin_bottom = 340.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character5" type="Button" parent="characterselect"]
margin_left = 848.0
margin_top = 320.0
margin_right = 860.0
margin_bottom = 340.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character6" type="Button" parent="characterselect"]
margin_left = 1040.0
margin_top = 320.0
margin_right = 1052.0
margin_bottom = 340.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character7" type="Button" parent="characterselect"]
margin_left = 80.0
margin_top = 496.0
margin_right = 92.0
margin_bottom = 516.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character8" type="Button" parent="characterselect"]
margin_left = 272.0
margin_top = 496.0
margin_right = 284.0
margin_bottom = 516.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character9" type="Button" parent="characterselect"]
margin_left = 464.0
margin_top = 496.0
margin_right = 476.0
margin_bottom = 516.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character10" type="Button" parent="characterselect"]
margin_left = 656.0
margin_top = 496.0
margin_right = 668.0
margin_bottom = 516.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character11" type="Button" parent="characterselect"]
margin_left = 848.0
margin_top = 496.0
margin_right = 860.0
margin_bottom = 516.0
rect_scale = Vector2( 8, 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="characters" type="Node" parent="."]

[node name="character 1" type="Sprite" parent="characters"]
position = Vector2( 128, 384 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 3
vframes = 4

[node name="character 2" type="Sprite" parent="characters"]
position = Vector2( 320, 384 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
hframes = 3
vframes = 4

[node name="character 3" type="Sprite" parent="characters"]
position = Vector2( 512, 384 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4

[node name="character 4" type="Sprite" parent="characters"]
position = Vector2( 704, 384 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
hframes = 3
vframes = 4

[node name="character 5" type="Sprite" parent="characters"]
position = Vector2( 896, 384 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 3
vframes = 4

[node name="character 6" type="Sprite" parent="characters"]
position = Vector2( 1088, 384 )
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )
hframes = 3
vframes = 4

[node name="character 7" type="Sprite" parent="characters"]
position = Vector2( 128, 560 )
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )
hframes = 3
vframes = 4

[node name="character 8" type="Sprite" parent="characters"]
position = Vector2( 320, 560 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
hframes = 3
vframes = 4

[node name="character 9" type="Sprite" parent="characters"]
position = Vector2( 512, 560 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
hframes = 3
vframes = 4

[node name="character 10" type="Sprite" parent="characters"]
position = Vector2( 704, 560 )
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )
hframes = 3
vframes = 4

[node name="character 11" type="Sprite" parent="characters"]
position = Vector2( 896, 560 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )
hframes = 3
vframes = 4

[node name="Back" type="Button" parent="."]
margin_top = 576.0
margin_right = 32.0
margin_bottom = 608.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="teamselect/team 1" to="." method="_on_team_1_pressed"]
[connection signal="pressed" from="teamselect/team 2" to="." method="_on_team_2_pressed"]
[connection signal="pressed" from="teamselect/team 3" to="." method="_on_team_3_pressed"]
[connection signal="pressed" from="teamselect/team 4" to="." method="_on_team_4_pressed"]
[connection signal="pressed" from="teamselect/team 5" to="." method="_on_team_5_pressed"]
[connection signal="pressed" from="characterselect/character1" to="." method="_on_character1_pressed"]
[connection signal="pressed" from="characterselect/character2" to="." method="_on_character2_pressed"]
[connection signal="pressed" from="characterselect/character3" to="." method="_on_character3_pressed"]
[connection signal="pressed" from="characterselect/character4" to="." method="_on_character4_pressed"]
[connection signal="pressed" from="characterselect/character5" to="." method="_on_character5_pressed"]
[connection signal="pressed" from="characterselect/character6" to="." method="_on_character6_pressed"]
[connection signal="pressed" from="characterselect/character7" to="." method="_on_character7_pressed"]
[connection signal="pressed" from="characterselect/character8" to="." method="_on_character8_pressed"]
[connection signal="pressed" from="characterselect/character9" to="." method="_on_character9_pressed"]
[connection signal="pressed" from="characterselect/character10" to="." method="_on_character10_pressed"]
[connection signal="pressed" from="characterselect/character11" to="." method="_on_character11_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
